# ood_project

./: .gitignore  README.md  setup.py
ood/experiments/: min_jerk_gen.py  plotting_meeting_2023_02_23.py  policyNN_swingup.py  presentation_LQRlike_kernel_parabola.py  presentation_kink_kernel_fourier_duality_stationarity.py  presentation_matrix_complexity.py  simple_loop_2dpend.py  tes_MPPI_dubins_MOrrgp.py  test_MOrrgp_dubins_car_new_model.py  test_MOrrtp_dubinscar_prediction_module.py  test_MOrrtp_dubinscar_prediction_module_with_gpflow.py  test_MOrrtp_kink.py  test_MOrrtp_kink_many_models.py  test_MOrrtp_kink_many_models_context_var.py  test_MOrrtp_parabola_many_models_context_var.py  test_MOrrtp_parabola_many_models_context_var_LQRlike.py  test_MOrrtp_quadruped_ood_detection.py  test_MOrrtp_quadruped_ood_detection_refactored.py  test_MOrrtp_quadruped_prediction_module_with_gpflow.py  test_MOrrtp_vanderpol.py  test_MOrrtp_vanderpol_prediction_module.py  test_MultiDimensionalFourierTransformQuadratureCartPoleStructure.py  test_data_efficiency.py  test_data_efficiency_smaller_ratios.py  test_density_z0z1.py  test_dubin_car.py  test_dubin_car_control_lib.py  test_frequencies_cartpole.py  test_gpu.py  test_hydra.py  test_integral.py  test_inverse_fourier_kernels.py  test_kernel_fit.py  test_kink.py  test_koopman_nonlinear_RRTP.py  test_multicoloredlines.py  test_new_model.py  test_new_model_deep_karhunen_loeve.py  test_new_paradigm.py  test_ood_metric.py  (+13 more)
ood/experiments/config/: RRTPQfeatures.yaml  config.yaml
ood/experiments/config/gpmodel/: RRTPRandomFourierFeatures.yaml  RRTPRegularFourierFeatures.yaml  RRTPSarkkaFeatures.yaml  ReducedRankProcess.yaml
ood/experiments/config/sampler/: hmc.yaml
ood/experiments/config/spectral_density/: cart_pole.yaml  dubinscar.yaml  expsup.yaml  kink.yaml  kinksharp.yaml  matern.yaml  noname.yaml  parabola.yaml  quadruped.yaml  squaredexp.yaml  vanderpol.yaml
ood/fourier_kernel/: __init__.py  base.py
ood/predictions_module/: CMakeLists.txt  package.xml
ood/predictions_module/include/: predictions.hpp
ood/predictions_module/src/: predictions.cpp  predictions_interface.cpp
ood/predictions_module/tests/: test_predictions.cpp  test_predictions.py
ood/spectral_density_approximation/: elliptical_slice_sampler.py  reconstruct_function_from_spectral_density.py
ood/utils/: common.py
